fix errors with get single
