# controllers/restaurant.js
@@ -10,12 +10,19 @@ const getAll = async (req, res) => {
 };
 
 const getSingle = async (req, res) => {
-  const restaurantName = new ObjectId(req.body.restaurant.name);
-  const result = await mongodb.getDb().db().collection('restaurant').find({ name: restaurantName });
-  result.toArray().then((lists) => {
-    res.setHeader('Content-Type', 'application/json');
-    res.status(200).json(lists[0]);
-  });
+    const restaurantName = req.params.name; 
+    const result = await mongodb
+        .getDb()
+        .db()
+        .collection('restaurant')
+        .findOne({ 'restaurant.name': restaurantName });
+
+    if (result) {
+        res.setHeader('Content-Type', 'application/json');
+        res.status(200).json(result.restaurant);
+    } else {
+        res.status(404).json({ message: 'User Not Found' });
+    }
 };
 
 module.exports = { getAll, getSingle };
