# swagger.json
@@ -5,24 +5,25 @@
     "description": "Restaurant API",
     "version": "1.0.0"
   },
-  "host": "project-two-cse341.onrender.com",
+  "host": "localhost:8080",
   "basePath": "/",
+  "tags": [
+    {
+      "name": "User",
+      "description": "Operations about users"
+    },
+    {
+      "name": "Restaurant",
+      "description": "Operations about restaurants"
+    }
+  ],
   "schemes": [
-    "https"
+    "http"
   ],
   "paths": {
-    "/api-docs": {
-      "get": {
-        "description": "",
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
     "/user/": {
       "get": {
+        "tags":["User"],
         "description": "",
         "produces": [
           "application/json"
@@ -34,6 +35,7 @@
         }
       },
       "post": {
+        "tags":["User"],
         "description": "",
         "parameters": [
           {
@@ -61,6 +63,7 @@
     },
     "/user/{username}": {
       "get": {
+        "tags":["User"],
         "description": "",
         "produces": [
           "application/json"
@@ -82,6 +85,7 @@
     },
     "/restaurant/": {
       "get": {
+        "tags":["Restaurant"],
         "description": "",
         "produces": [
           "application/json"
@@ -95,6 +99,7 @@
     },
     "/restaurant/{name}": {
       "get": {
+        "tags":["Restaurant"],
         "description": "",
         "produces": [
           "application/json"
